[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Option_menu.gd" type="Script" id=1]

[node name="Option_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -433.0
margin_right = 433.0
margin_bottom = 91.0
text = "OPTIONS"
align = 1
valign = 1

[node name="CharCN1" type="CheckButton" parent="."]
margin_left = 112.0
margin_top = 267.0
margin_right = 188.0
margin_bottom = 307.0

[node name="CharCN2" type="CheckButton" parent="."]
margin_left = 109.0
margin_top = 103.0
margin_right = 185.0
margin_bottom = 143.0

[node name="PrincipalMenuButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = -74.0
margin_right = 118.0
margin_bottom = 74.0
text = "Principal Menu"

[node name="Label2" type="Label" parent="."]
margin_left = 124.0
margin_top = 92.0
margin_right = 192.0
margin_bottom = 106.0
text = "player1"

[node name="Label3" type="Label" parent="."]
margin_left = 130.0
margin_top = 258.0
margin_right = 198.0
margin_bottom = 272.0
text = "Player2"

[connection signal="toggled" from="CharCN1" to="." method="_on_CharCN1_toggled"]
[connection signal="toggled" from="CharCN2" to="." method="_on_CharCN2_toggled"]
[connection signal="pressed" from="PrincipalMenuButton" to="." method="_on_PrincipalMenuButton_pressed"]
